🩹 Fix: some flags were overlapping with the member name [#70]

--- a/assets/stylesheets/teams.scss
+++ b/assets/stylesheets/teams.scss
@@ -91,13 +91,14 @@ $icn-size: 88px;
 .info {
 	grid-row: 1 / 2;
 	grid-column: 2 / 3;
+	margin-top: 8px;
 	margin-left: 5px;
 	white-space: nowrap;
 }
 
 .role,
 .details {
-	opacity: 0.85;
+	opacity: 0.75;
 }
 
 .role-and-country {
@@ -114,16 +115,17 @@ $icn-size: 88px;
 	max-width: 38px;
 	max-height: 21px;
 	position: relative;
-	top: 4px;
+	bottom: 4px;
 	left: 1px;
 	pointer-events: none;
 	user-select: none;
 }
 
 h2 {
-	font-size: 20px;
+	font-size: 18.5px;
 	margin: 0;
 	margin-top: -4px;
+	margin-bottom: -2px;
 	margin-left: 1px;
 	color: white;
 	font-weight: 400;
